# TorrentingLogins

./: .gitignore  LICENSE  pyproject.toml
src/torrenting_logins/: login.py  main.py  sites.py
tests/: conftest.py  test_logins.py
