[tool.poetry]
name = "torrentinglogins"
version = "0.1.0"
description = ""
authors = ["Funky Brows <funkybrows@github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "torrenting_logins", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.30.0"
pytest-asyncio = "^0.20.3"
pytest-playwright = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
